src/test/deca/context/valid/custom/Declaration/decl_float.deca
// Description:
//   Declaration of a float and print it on the standard output.
// Results:
//    Line 11: display a float on the standard output.
//
// History:
//    created on 11/01/2022

{
   float x = 5.2;
   println(x);
}
